--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -19,11 +21,17 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "prisma": "^6.2.1",
+    "radis": "^2.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
+    "redis": "^4.7.0",
+    "redux": "^5.0.1",
+    "redux-toolkit": "^1.1.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.6.0",
